hphp/test/zend/bad/bug26077.php
<?php
class foo {} new foo();
?>
===DONE===